[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Images/Background/логотип, футурустический танк, игра стратегия, темный фон, название strategy on a plane_Kandinsky 2.1 (1).jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Styles/ButtonPressed.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/Styles/ButtonHoverStyle.tres" type="StyleBox" id=3]
[ext_resource path="res://Assets/Styles/ButtonNormal.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/Scripts/SingleModeControl.gd" type="Script" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -52.0
margin_right = 152.0
margin_bottom = 52.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 150.0
margin_bottom = 172.0
custom_constants/separation = 30
alignment = 1

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.113725, 0.905882, 0.0666667, 1 )
text = "City Name"
valign = 1
uppercase = true

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 150.0
margin_bottom = 58.0
size_flags_horizontal = 5
size_flags_vertical = 1
custom_colors/font_color = Color( 0.113725, 0.905882, 0.0666667, 1 )
text = "Dificult"
valign = 2
autowrap = true
uppercase = true

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 150.0
margin_bottom = 102.0
custom_colors/font_color = Color( 0.113725, 0.905882, 0.0666667, 1 )
text = "Map Size"
valign = 1
uppercase = true

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 150.0
margin_bottom = 172.0
rect_min_size = Vector2( 150, 40 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Back"
icon_align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 172.0
custom_constants/separation = 22
alignment = 1

[node name="settle_name" type="LineEdit" parent="HBoxContainer/VBoxContainer2"]
margin_right = 150.0
margin_bottom = 26.0
rect_clip_content = true
custom_colors/font_color = Color( 0.113725, 0.905882, 0.0666667, 1 )
align = 1
max_length = 30
clear_button_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 48.0
margin_right = 150.0
margin_bottom = 68.0

[node name="dif_switch_back" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
text = "<"

[node name="dificult" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 24.0
margin_top = 3.0
margin_right = 71.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.113725, 0.905882, 0.0666667, 1 )
text = "Normal"

[node name="dif_switch_next" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 75.0
margin_right = 95.0
margin_bottom = 20.0
text = ">"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 90.0
margin_right = 150.0
margin_bottom = 110.0

[node name="map_back" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_right = 20.0
margin_bottom = 20.0
text = "<"

[node name="map_size" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 24.0
margin_top = 3.0
margin_right = 47.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.113725, 0.905882, 0.0666667, 1 )
text = "BiG"

[node name="map_next" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 51.0
margin_right = 71.0
margin_bottom = 20.0
text = ">"

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer2"]
margin_top = 132.0
margin_right = 150.0
margin_bottom = 172.0
rect_min_size = Vector2( 150, 40 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
text = "Start Game"
icon_align = 1

[node name="info_label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -71.5
margin_top = -62.0
margin_right = 71.5
margin_bottom = -48.0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.223529, 0, 0, 1 )
text = "Set settlename please"
